<resources>
    <string name="app_name">Le Guide Bien Pénard</string>
    <string name="le_guide_bien_p_nard">Le Guide Bien Pénard</string>
    <string name="le_guide_pour_survivre_p_pouze_au_pid_mie">Le guide pour survivre aux épidémies sans contraintes</string>
    <string name="valider">Valider</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="ex">ex : ******</string>
    <string name="editTextEmail">ex: bearGrylls@gmail.com</string>
    <string name="create">Créer</string>
    <string name="create_account">Créer un compte</string>
    <string name="connexion">Connexion</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="example_application">Example application</string>
    <string name="checkbox">CheckBox</string>
    <string name="rafra_chir">Rafraîchir</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="importance">Importance</string>
    <string name="nom_objet">Nom objet</string>
    <string name="localisation">Localisation</string>
    <string name="description">Description</string>
    <string name="textview">TextView</string>
    <string name="retour">Retour</string>

</resources>
